--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
+    "@mui/x-charts": "^6.19.5",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
     "js-cookie": "^3.0.5",
